fixed an issue with checkboxes not showing

--- a/less/sweetp-menu.less
+++ b/less/sweetp-menu.less
@@ -73,7 +73,7 @@ label .hamburger:after {
     bottom: -10px;
 }
 
-label input {
+label.sweetp-menu input {
     display: none;
 }
 
